[tool.poetry]
name = "learncppbook"
version = "0.1.0"
description = "Learn cpp to book conversion"
authors = ["James Sadler"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
